Fix broken links

--- a/machine-learning/01-Intro to Machine Learning.ipynb
+++ b/machine-learning/01-Intro to Machine Learning.ipynb
@@ -86,21 +86,26 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.ML, 2.0.0-preview.22356.1</span></li></ul></div></div>"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#i \"nuget:https://pkgs.dev.azure.com/dnceng/public/_packaging/MachineLearning/nuget/v3/index.json\"\n",
         "#r \"nuget: Microsoft.ML, 2.0.0-preview.22356.1\""
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.ML, 2.0.0-preview.22356.1</span></li></ul></div></div>"
-          },
-          "execution_count": 1,
-          "metadata": {}
-        }
       ]
     },
     {
@@ -116,13 +121,16 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "using Microsoft.ML;\n",
         "using Microsoft.ML.Data;"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -137,12 +145,15 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "MLContext mlContext = new MLContext();"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,16 +168,19 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "public class HouseData\n",
         "{\n",
         "    public float Size { get; set; }\n",
         "    public float Price { get; set; }\n",
         "}"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -181,16 +195,19 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "public class Prediction\n",
         "{\n",
         "    [ColumnName(\"Score\")]\n",
         "    public float Price { get; set; }\n",
         "}"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -205,16 +222,19 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "HouseData[] houseData = {\n",
         "    new HouseData() { Size = 1.1F, Price = 1.2F },\n",
         "    new HouseData() { Size = 1.9F, Price = 2.3F },\n",
         "    new HouseData() { Size = 2.8F, Price = 3.0F },\n",
         "    new HouseData() { Size = 3.4F, Price = 3.7F } };"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -229,12 +249,15 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "IDataView trainingData = mlContext.Data.LoadFromEnumerable(houseData);"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -249,14 +272,17 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "// 2. Specify data preparation and model training pipeline\n",
         "var pipeline = mlContext.Transforms.Concatenate(\"Features\", new[] { \"Size\" })\n",
         "               .Append(mlContext.Regression.Trainers.Sdca(labelColumnName: \"Price\", maximumNumberOfIterations: 100));"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -271,12 +297,15 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "var model = pipeline.Fit(trainingData);"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -291,8 +320,23 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Coefficient of determination for the trained model: 0.98\r\n"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "HouseData[] testData = {\n",
         "    new HouseData() { Size = 1.1F, Price = 1.2F },\n",
@@ -323,16 +367,6 @@
         "\n",
         "// Print the R-Squared value. The Closer to 1 indicates a better fitted model.\n",
         "Console.WriteLine($\"Coefficient of determination for the trained model: {trainedModelMetrics.RSquared:0.00}\");"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "Coefficient of determination for the trained model: 0.98\r\n"
-          },
-          "execution_count": 1,
-          "metadata": {}
-        }
       ]
     },
     {
@@ -348,12 +382,15 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "var predictionEngine = mlContext.Model.CreatePredictionEngine<HouseData, Prediction>(model);"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -368,22 +405,27 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Predicted price for size: 2500 sq ft= $274.48k\r\n"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "var size = new HouseData() { Size = 2.5F };\n",
         "var price = predictionEngine.Predict(size);\n",
         "Console.WriteLine($\"Predicted price for size: {size.Size*1000} sq ft= {price.Price*100:C}k\");"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "Predicted price for size: 2500 sq ft= $274.48k\r\n"
-          },
-          "execution_count": 1,
-          "metadata": {}
-        }
       ]
     },
     {
@@ -401,7 +443,7 @@
       "source": [
         "# Continue learning\n",
         "\n",
-        "> [⏩ Next Module - Data Prep and Feature Engineering](https://ntbk.io/ml-02-data)"
+        "> [⏩ Next Module - Data Prep and Feature Engineering](./02-Data%20Preparation%20and%20Feature%20Engineering.ipynb)"
       ]
     }
   ],
