--- a/machine-learning/02-Data Preparation and Feature Engineering.ipynb
+++ b/machine-learning/02-Data Preparation and Feature Engineering.ipynb
@@ -54,21 +54,26 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.ML, 2.0.0-preview.22313.1</span></li></ul></div></div>"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#i \"nuget:https://pkgs.dev.azure.com/dnceng/public/_packaging/MachineLearning/nuget/v3/index.json\"\n",
         "#r \"nuget: Microsoft.ML, 2.0.0-preview.22356.1\""
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Microsoft.ML, 2.0.0-preview.22313.1</span></li></ul></div></div>"
-          },
-          "execution_count": 1,
-          "metadata": {}
-        }
       ]
     },
     {
@@ -77,14 +82,17 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "using Microsoft.ML;\n",
         "using Microsoft.ML.Data;\n",
         "using Microsoft.ML.Transforms; "
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -100,8 +108,12 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "using System;\n",
         "using System.IO;\n",
@@ -134,8 +146,7 @@
         "\n",
         "\treturn filePath;\n",
         "}"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -163,8 +174,12 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "public class ModelInput\n",
         "{\n",
@@ -197,8 +212,7 @@
         "    public float Fare_amount { get; set; }\n",
         "\n",
         "}"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -213,13 +227,16 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "//Create MLContext\n",
         "MLContext mlContext = new MLContext();"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -236,8 +253,12 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "var trainDataPath = EnsureDataSetDownloaded(\"taxi-fare.csv\");\n",
         "\n",
@@ -249,8 +270,7 @@
         "IDataView data = textLoader.Load(trainDataPath);\n",
         "\n",
         "data.Preview(1); "
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -269,8 +289,12 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "ModelInput[] inMemoryCollection = new ModelInput[]\n",
         "{\n",
@@ -295,8 +319,7 @@
         "        Fare_amount = 8, \n",
         "    }\n",
         "};"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -304,8 +327,12 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "// Create MLContext\n",
         "MLContext mlContext = new MLContext();\n",
@@ -314,8 +341,7 @@
         "IDataView data = mlContext.Data.LoadFromEnumerable<ModelInput>(inMemoryCollection);\n",
         "\n",
         "data.Preview(1);"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -363,16 +389,19 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "var pipeline = mlContext.Transforms.Categorical.OneHotEncoding(\n",
         "    new[] \n",
         "    { new InputOutputColumnPair(@\"vendor_id\"), \n",
         "    new InputOutputColumnPair(@\"payment_type\")},\n",
         "    OneHotEncodingEstimator.OutputKind.Binary); "
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -387,8 +416,12 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "using System.Numerics; \n",
         "\n",
@@ -422,8 +455,7 @@
         "    [ColumnName(@\"fare_amount\")]\n",
         "    public float Fare_amount { get; set; }\n",
         "}"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -431,8 +463,23 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0 0 1\t\t0 0 1\r\n"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "// Run the transform\n",
         "IDataView transformedData = pipeline.Fit(data).Transform(data);\n",
@@ -445,16 +492,6 @@
         "    Console.WriteLine(\"{0}\\t\\t{1}\", string.Join(\" \", item.Vendor_id.DenseValues()),\n",
         "                    string.Join(\" \", item.Payment_type.DenseValues()));\n",
         "}"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "0 0 1\t\t0 0 1\r\n"
-          },
-          "execution_count": 1,
-          "metadata": {}
-        }
       ]
     },
     {
@@ -472,16 +509,19 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "pipeline.Append(mlContext.Transforms.ReplaceMissingValues(\n",
         "    new[] { new InputOutputColumnPair(@\"rate_code\", @\"rate_code\"), \n",
         "    new InputOutputColumnPair(@\"passenger_count\", @\"passenger_count\"), \n",
         "    new InputOutputColumnPair(@\"trip_time_in_secs\", @\"trip_time_in_secs\"), \n",
         "    new InputOutputColumnPair(@\"trip_distance\", @\"trip_distance\") })); "
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -496,23 +536,28 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Rate_code: 0"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "IDataView transformedData = pipeline.Fit(data).Transform(data);\n",
         "var convertedData = mlContext.Data.CreateEnumerable<ModelInputTransformed>(transformedData, true);\n",
         "\n",
         "\"Rate_code: \" + convertedData.ElementAt(1).Rate_code"
-      ],
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "Rate_code: 0"
-          },
-          "execution_count": 1,
-          "metadata": {}
-        }
       ]
     },
     {
@@ -528,13 +573,16 @@
       "metadata": {
         "dotnet_interactive": {
           "language": "csharp"
+        },
+        "vscode": {
+          "languageId": "csharp"
         }
       },
+      "outputs": [],
       "source": [
         "pipeline.Append(mlContext.Transforms.Concatenate(\n",
         "    @\"Features\", new[] { @\"vendor_id\", @\"payment_type\", @\"rate_code\", @\"passenger_count\", @\"trip_time_in_secs\", @\"trip_distance\" }));"
-      ],
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -549,8 +597,8 @@
       "source": [
         "# Continue learning\n",
         "\n",
-        "> [⏩ Next Module - Training and AutoML](https://ntbk.io/ml-03-training)  \n",
-        "> [⏪ Last Module - Intro to Machine Learning](https://ntbk.io/ml-01-intro)  "
+        "> [⏩ Next Module - Training and AutoML](./03-Training%20and%20AutoML.ipynb)  \n",
+        "> [⏪ Last Module - Intro to Machine Learning](./01-Intro%20to%20Machine%20Learning.ipynb)  "
       ]
     }
   ],
