--- a/machine-learning/05 - AutoML Sweepable API.ipynb
+++ b/machine-learning/05 - AutoML Sweepable API.ipynb
@@ -249,7 +249,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### See also\n",
+    "## Continue learning\n",
+    "\n",
+    "> [⏩ Next Module - AutoML Tuner](./06-AutoML%20HPO%20and%20tuner.ipynb)  \n",
+    "> [⏪ Last Module - AutoML Sweepable API](./05%20-%20AutoML%20Sweepable%20API.ipynb)\n",
+    "\n",
+    "## See also\n",
     "- [Training and AutoML](./03-Training%20and%20AutoML.ipynb)\n",
     "- [Regression with Taxi Dataset](./E2E-Regression%20with%20Taxi%20Dataset.ipynb)\n",
     "- [Classification with Iris Dataset](./E2E-Classification%20with%20Iris%20Dataset.ipynb)\n",
