--- a/machine-learning/06-AutoML HPO and tuner.ipynb
+++ b/machine-learning/06-AutoML HPO and tuner.ipynb
@@ -303,6 +303,19 @@
     "var combineChart = Chart.Combine(new[]{ gridSearchChart, eciCfoSearchChart});\n",
     "combineChart.Display()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Continue learning\n",
+    "\n",
+    "> [⏪ Last Module - AutoML Tuner](./06-AutoML%20HPO%20and%20tuner.ipynb)\n",
+    "\n",
+    "## See also\n",
+    "\n",
+    "- [AutoML SearchSpace](./Parameter%20and%20SearchSpace.ipynb)"
+   ]
   }
  ],
  "metadata": {
