--- a/machine-learning/Parameter and SearchSpace.ipynb
+++ b/machine-learning/Parameter and SearchSpace.ipynb
@@ -626,10 +626,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Continue learning\n",
+    "## Continue learning\n",
     "\n",
-    "#### The following notebook shows how to create `SweepableEstimator` with custom search space.\n",
-    "> E2E-Forecasting using SSA with Luna Dataset"
+    "> [E2E-Forecasting using SSA with Luna Dataset](./E2E-Forecasting%20using%20SSA%20with%20Luna%20Dataset.ipynb) - This shows how to create `SweepableEstimator` with custom search space."
    ]
   }
  ],
